Added ability to delete a contact

--- a/public/index.html
+++ b/public/index.html
@@ -56,7 +56,7 @@
 
 <!-- Templates -->
 <script id="contactTemplate" type="text/x-handlebars">
-  <div id="contact{{id}}">
+  <div data-id="{{id}}" id="contact{{id}}">
     <h3>{{full_name}}</h3>
     <p><strong>Phone Number:</strong>{{phone_number}}</p>
     <p><strong>Email:</strong>{{email}}</p>
