Only show 'Create Contact' form after clicking 'Add Contact'

--- a/public/index.html
+++ b/public/index.html
@@ -22,9 +22,9 @@
       <input type="text" placeholder="Search">
     </div>
 
-    <div>
+    <div id="contactFormWrapper">
       <form id="contactForm">
-        <h2>Create Contact</h2>
+        <h2 class="contactForm"></h2>
         <label>
           Full name:
           <input name="full_name" type="text">
