Implement cancel button

--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
         </label>
 
         <button type="submit">Submit</button>
-        <button type="reset">Cancel</button>
+        <button id="cancel" type="reset">Cancel</button>
       </form>
     </div>
 
