Change hidden content to use class instead of display

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
       <input type="text" placeholder="Search">
     </div>
 
-    <div id="contactFormWrapper">
+    <div id="contactFormWrapper" class="hidden">
       <form id="contactForm">
         <h2 class="contactForm"></h2>
         <label>
