Create transition for contact form

--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
     </div>
 
     <div id="contactFormWrapper" class="hidden">
+      <div id="padding">
       <form id="contactForm">
         <h2 class="contactForm"></h2>
         <label>
@@ -49,6 +50,7 @@
         <button type="submit">Submit</button>
         <button id="cancel" type="reset">Cancel</button>
       </form>
+      </div>
     </div>
 
     <div id="contacts">
