Improve layout for add and edit contact form

--- a/public/index.html
+++ b/public/index.html
@@ -26,26 +26,18 @@
       <div id="padding">
       <form id="contactForm">
         <h2 class="contactForm"></h2>
-        <label>
-          Full name:
-          <input class="full_name" name="full_name" type="text">
-        </label>
+        <label for="full_name">Full name:</label>
+        <input class="full_name" name="full_name" type="text">
 
-        <label>
-          Email address:
-          <input class="email" name="email" type="email">
-        </label>
+        <label for="email">Email address:</label>
+        <input class="email" name="email" type="email">
 
-        <label>
-          Telephone number:
-          <input class="phone_number" name="phone_number" type="tel">
-        </label>
-
-        <label>
-          Tags:
-          <input class="tags" name="tags" type="text">
-        </label>
-
+        <label for="phone_number">Telephone number:</label>
+        <input class="phone_number" name="phone_number" type="tel">
+        
+        <label for="tags">Tags:</label>
+        <input class="tags" name="tags" type="text">
+        
         <input type="hidden" name="id" id="editId">
         <button type="submit">Submit</button>
         <button id="cancel" type="reset">Cancel</button>
