--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
   <script src="/javascripts/jquery.js"></script>
   <script src="/javascripts/handlebars.js"></script>
   <script src="/javascripts/contact_manager.js" type="module"></script>
+  <script src="/javascripts/template_manager.js" type="module"></script>
   <script src="/javascripts/main.js" type="module"></script>
 </head>
 <body>
