Add flash messages for all requests that update or delete data

--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,10 @@
       <button id="add">Add Contact</button>
       <input id="search" type="text" placeholder="Search">
       <div id="filteringTags"></div>
+      <div id="flashMessage" class="hidden">
+        <p id="errorMessage"></p>
+        <p id="successMessage"></p>
+      </div>
     </div>
 
     <div id="contactFormWrapper" class="hidden">
