Extract FormManager to a module

--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,10 @@
   <link rel="stylesheet" href="/stylesheets/main.css">
   <script src="/javascripts/jquery.js"></script>
   <script src="/javascripts/handlebars.js"></script>
+  <script src="/modules/utilities.js" type="module"></script>
+  <script src="/modules/form_manager.js" type="module"></script>
   <script src="/modules/contact_manager.js" type="module"></script>
   <script src="/modules/template_manager.js" type="module"></script>
-  <script src="/modules/utilities.js" type="module"></script>
   <script src="/javascripts/main.js" type="module"></script>
 </head>
 <body>
